# ChangeLog for dev-ruby/sqlite3-ruby
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/ChangeLog,v 1.22 2008/08/06 16:44:13 graaff Exp $

  16 Sep 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
  +sqlite3-ruby-1.2.4.ebuild:
  Adding ebuild for 1.2.4. It is 19 compatible and includes a fix for a
  probably security relevant upstream bug #21289

  06 Aug 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  12 May 2008; Markus Rothe <corsair@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Stable on ppc64; bug #221309

  12 May 2008; Hans de Graaff <graaff@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  swig is not a runtime dependency; fixes #221479

  24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
  sqlite3-ruby-1.2.1.ebuild:
  Add ~x86-fbsd keyword, as per bug #168110.

  19 May 2007; Markus Rothe <corsair@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Added ~ppc64; bug #176308

  27 Apr 2007; Matti Bickel <mabi@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  ~ppc keyword readded (bug #168110)

  08 Apr 2007; Peter Weller <welp@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Keyworded ~amd64 wrt bug 168110

  27 Mar 2007; Raúl Porcel <armin76@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Add ~ia64 wrt bug 168110

  04 Mar 2007; Marius Mauch <genone@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
  Replacing einfo with elog

  23 Feb 2007; Ferris McCormick <fmccor@gentoo.org>
  sqlite3-ruby-1.2.1.ebuild:
  Add ~sparc keyword --- Bug #168110 --- and installs with USE='doc swig';
  testing seems good for tests that can be run (some require 'flexmock' which
  does not exist).

*sqlite3-ruby-1.2.1 (23 Feb 2007)

  23 Feb 2007; Richard Brown <rbrown@gentoo.org> +sqlite3-ruby-1.2.1.ebuild:
  Version bump, stop using gem.

  08 Oct 2006; Timothy Redaelli <drizzt@gentoo.org>
  sqlite3-ruby-1.1.0.ebuild:
  Added ~x86-fbsd keyword.
