@@ -1,4 +1,4 @@
-DIST sqlite3-ruby-1.2.4.gem 57856 RMD160 57ded40f2ecbf7efde64d738a4777cf497795972 SHA1 63d6b35bb8364c2971cf6f5397056faf3efb7ae7 SHA256 e24b5864bd13b0d142ba2c8deea17b0d85aaaa9dbd3e491fc00bca201d19b86b
-EBUILD sqlite3-ruby-1.2.4.ebuild 823 RMD160 256754c875b9bf0349dc6c87ae38944be3e3ad4b SHA1 0a5bb37d7aed8fc757589c6ec62718c1a1dbb2e4 SHA256 7ccd10422df85ceb377cbf20303459134dd5cb6b593f6bf5cf514912e3a18da7
-MISC ChangeLog 3085 RMD160 4c42075d4d129a08a6f33f2816825472f91ca4e6 SHA1 e72f2b928f65dc67a9b30700d8aca8f13f5a9e8f SHA256 a0e3dbc2630d2a924fc1e5525b40b3199f8b2b4b9c340a6d59bc3b765a50e856
+DIST sqlite3-ruby-1.2.4.tar.bz2 80907 RMD160 5757d7ce79cb39a21c62daa19e8725a037bbd4c1 SHA1 1ff66fc2fc3e40af9e21f81377eb343fe19619b1 SHA256 4781bb0d4d0ef6d1078dfda2832af30332e2f28a316c17eb854bb7ff5ea6b0d6
+EBUILD sqlite3-ruby-1.2.4.ebuild 1505 RMD160 37aaea8af5e3ccea3e640b70fbc0cc4d8b3a97c7 SHA1 504219d6b2a048e68d6a3b8038467542606f6c99 SHA256 5d2b8f87217bd07eb02ee729b28c8d260b6f0e2e60f480060108db855abfed7d
+MISC ChangeLog 3278 RMD160 de5b3ab24eaca0a47a281d823a95f81c599de9b7 SHA1 dcba0bae95991f38183b32dff5484b8721c3194a SHA256 3ae863aacb763f23246f70c3d91cae59b81b187d0b83341eb7808be753ccb5e8
 MISC metadata.xml 255 RMD160 5728a5d67f1b20016a81c8594151e41bc5442a74 SHA1 2616b37bf1924a7ea724e1e12dc7096e602445c5 SHA256 2316a3c7f17bf8dd9d41dfd645f14b1d0d61778aa91e45639eaec81f551cb68a
