@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/ChangeLog,v 1.22 2008/08/06 16:44:13 graaff Exp $
 
+  18 Sep 2008; Alex Legler <gentoo@a3li.info> sqlite3-ruby-1.2.4.ebuild:
+  Replaced old gem style ebuild with the right one, fixed documentation file
+  names and changed to thirdpartymirrors.
+
   16 Sep 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
   +sqlite3-ruby-1.2.4.ebuild:
   Adding ebuild for 1.2.4. It is 19 compatible and includes a fix for a
